FPVGate: Complete overhaul with ESP32-S3 support and modern UI
Major Changes:
- Add ESP32-S3-DevKitC-1 support with optimized pin configuration
- Add RGB LED status indicators (external NeoPixel support on GPIO18)
- Implement Material Design web interface with 4 theme options (Light, Dark, Oceanic, Deep Ocean)
- Add manual lap entry button during races
- Rebrand from PhobosLT to FPVGate with updated branding
- Change default channel to RaceBand 8 (5917 MHz)
- Update WiFi credentials (SSID: FPVGate_XXXX, Password: fpvgate1)
- Hide OTA update tab and add link in configuration
- Add visual feedback for race start button (orange pulse animation)
- Comprehensive new README with setup and troubleshooting guides

Hardware Features:
- RGB LED events: Green flash (user connected/race start), White flash (lap), Red triple flash (reset)
- Support for 1-2 external WS2812 LEDs on GPIO18
- Proper power configuration for ESP32-S3 (5V via VBUS)

UI Improvements:
- Theme selector dropdown with localStorage persistence
- Dark mode support with proper contrast
- Material Theme Oceanic and Deep Ocean color schemes
- Credits section with link to original PhobosLT repository
- Cleaner navigation (removed unused Update tab)
- Button state indicators and animations

Bug Fixes:
- Fix GPIO3 strapping pin issue (moved RSSI to GPIO4)
- Fix WiFi AP password length requirement (8 characters minimum)
- Fix RGB LED initialization with compile-time GPIO constant
- Remove RSSI debug spam in laptimer
- Prevent OTA iframe loading on page load

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
+# PlatformIO
 .pio
-.DS_Store
+.pioenvs
+.piolibdeps
+
+# IDE
 .vscode
 .idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Backups
+*.bak
+*.tmp
+
+# Build artifacts
+*.bin
+*.elf
