--- a/targets/ESP32S3.ini
+++ b/targets/ESP32S3.ini
@@ -13,6 +13,7 @@ lib_deps =
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     bblanchon/ArduinoJson @7.2.0
     ayushsharma82/ElegantOTA @^3.1.6
+    fastled/FastLED @^3.7.0
 build_flags = 
     -DESP32S3=1
     -DCONFIG_ASYNC_TCP_EVENT_QUEUE_SIZE=256
